# sample-rust-syslog

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  parse_syslog_message.rs  send_log_to_law.rs
